--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 
   <canvas id="canvas"></canvas>
 
-  <script src="https://cdn.jsdelivr.net/npm/three@0.115.0/build/three.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/three@0.115.0/build/three.min.js"></script> -->
   <script src="https://fariskassim.com/stage/rebel9/teaf/blob/v4/js/perlin.js"></script>
 
   <script src="https://unpkg.com/three@0.106.2/build/three.min.js"></script>
-  <script src="https://unpkg.com/three@0.106.2/examples/js/libs/stats.min.js"></script>
+  <!-- <script src="https://unpkg.com/three@0.106.2/examples/js/libs/stats.min.js"></script> -->
   <script src="https://unpkg.com/tween.js@16.6.0/src/Tween.js"></script>
 
   <script src="./js/tween.umd.js"></script>
